# bpc_na_vinci_code

./: .dockerignore  .gitignore  .gitmodules  Dockerfile.estimator  LICENSE.md  README.md  TODO.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  test_roslibpy.py  test_roslibpy_service.py  tox.ini
.github/workflows/: formatter.yaml
bpc/: pipeline.py  pipeline_alpha.py
bpc/2D_detection/: .gitignore  bop_to_yolo_dataset.py  inference_sample_yolo.py  prepare_data.py  train.py  train_detection_script.sh  yolo_train.ipynb  yolo_train.md
bpc/6D_pose_estimation/: README.md
bpc/ibpc_pose_estimator_py/ibpc_pose_estimator_py/: ibpc_pose_estimator.py
bpc/sixD_pose_estimation/: README.md
bpc/utils/: README.md  mssd_calc.py  visualiser.py
datasets/: README.md
my_package/my_package/: my_node.py
our_tests/: README.md  exported_test.py  test_placeholder.py
ros_ws/ibpc_interfaces/: CMakeLists.txt
ros_ws/ibpc_interfaces/srv/: TestService.srv
ros_ws/ibpc_pose_estimator_py/: setup.py
ros_ws/ibpc_pose_estimator_py/ibpc_pose_estimator_py/: ibpc_pose_estimator.py
ros_ws/ibpc_tester/: package.xml
tests/: place_holder_test.py
