[metadata]
name = bpc_nvc
description = Bin Picking Challenge 2025 proposition from Na Vinci Code Team 
author = VincidaB, Tekexa
license = MIT
license_file = LICENSE.md
platforms = any
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12.3

[options]
packages =
    bpc
install_requires =
    numpy>=1.26
    scipy>=1.14
    opencv-python>=4.8
    torch>=2.3
    torchvision>=0.18
    torchaudio>=2.3
    tensorboard>=2.18
    ultralytics>=8.3
    matplotlib>=3.10
    Pillow>=10.2
    tqdm>=4.67
    pyrender>=0.1
    pyglet>=2.1
    trimesh>=4.5
    jupyter
python_requires = >=3.12
package_dir =
    =.
zip_sage = no