[metadata]
name = bpc_nvc
description = Bin Picking Challenge 2025 proposition from Na Vinci Code Team 
author = VincidaB, Tekexa
license = MIT
license_file = LICENSE.md
platforms = any
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12.3

[options]
packages =
    bpc
    our_tests
install_requires =
    numpy>=2
    scipy>=1.14
    opencv-python>=4.8
    torch>=2.3
    torchvision>=0.18
    torchaudio>=2.3
    tensorboard>=2.18
    ultralytics>=8.3
    matplotlib>=3.10
    Pillow>=10.2
    tqdm>=4.67
    pyrender>=0.1
    pyglet>=2.1
    trimesh>=4.5
    jupyter
python_requires = >=3.12
package_dir =
    =.
zip_sage = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=3.0
    mypy>=1
    flake8>=6.0
    tox>=4

[flake8]
max-line-length = 160